terraform/server/ecs_alb.tf
# Create a security group for the ALB that allows HTTP and HTTPS traffic and permits all outbound traffic
resource "aws_security_group" "projects_server_alb" {
  tags = {
    Name = "${var.ENVIRONMENT}-projects_server_ALB"
  }
  name        = "${var.ENVIRONMENT}-projects_server_ALB"
  description = "projects_server_ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
